Delete method corrected

--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
             </div>
             <br />
             <div class="row">
-                <table class="table table-striped">
+                <table class="table table-striped" id="table1">
                     <thead>
                         <tr>
-                            <th>S No.</th>
                             <th>Name</th>
                             <th>Roll No.</th>
                             <th>Passout Year</th>
