--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="jumbotron" align="center">
             <h1 >Student Details<br /><small>This webpage displays data of students</small></h1>
         </div>
+
         <div class="container" align="center">
             <form class="form-inline">
                 <div class="form-group">
@@ -36,7 +37,7 @@
                         <button type="button" class="btn btn-success" onclick="submitDetails()">Submit</button>
                     </div>
                     <div class="col-sm-4">
-                        <button type="button" class="btn btn-primary">Edit Details</button>
+                        <button type="button" class="btn btn-primary" onclick="editDetails()">Edit Details</button>
                     </div>
                     <div class="col-sm-4">
                         <button type="button" class="btn btn-danger" onclick="deleteDetails()">Delete</button>
@@ -59,5 +60,37 @@
                     </tbody>
                 </table>
             </div>
+        </div>
+
+        <div class="modalfade" id="editDataModal" role="dialog">
+            <div class="modal-dialog">
+
+                <div class="modal-content">
+                    <div class="modal-header" style="padding:35px 50px;">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4><span class="glyphicon glyphicon-lock"></span></h4>
+                    </div>
+                    <div class="modal-body" style="padding:40px 50px;">
+                        <form role="form" id="editLoadDetails">
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="nameDetails" placeholder="Name"/>
+                            </div>
+                            <div class="form-group">
+                                <input type="number" class="form-control" id="rollNoDetails" placeholder="Roll No" />
+                            </div>
+                            <div class="form-group">
+                                <input type="number" class="form-control" id="passoutYearDetails" placeholder="Passout Year" />
+                            </div>
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="streamDetails" placeholder="Stream" />
+                            </div>
+                            <button type="button" class="btn btn-success btn-block"><span class="glyphicon glyphicon-off"></span>Submit</button>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
     </body>
 </head>
