--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous" />
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
         <link href="css/styles.css" rel="stylesheet" type="text/css" />
         <script src="js/main.js"></script>
     </head>
@@ -14,7 +16,7 @@
             <h1 >Student Details<br /><small>This webpage displays data of students</small></h1>
         </div>
 
-        <div class="container" align="center">
+        <div class="container" align="center" id="formA">
             <form class="form-inline">
                 <div class="form-group">
                     <div class="col-sm-3">
@@ -34,13 +36,13 @@
             <br />
             <div class="row">
                     <div class="col-sm-4">
-                        <button type="button" class="btn btn-success" onclick="submitDetails()">Submit</button>
+                        <button type="button" class="btn btn-success" id="submit_button">Submit</button>
                     </div>
                     <div class="col-sm-4">
-                        <button type="button" class="btn btn-primary" onclick="editDetails()">Edit Details</button>
+                        <button type="button" class="btn btn-primary" id="editButton">Edit Details</button>
                     </div>
                     <div class="col-sm-4">
-                        <button type="button" class="btn btn-danger" onclick="deleteDetails()">Delete</button>
+                        <button type="button" class="btn btn-danger" id="deleteButton">Delete</button>
                     </div>
             </div>
             <br />
@@ -62,15 +64,16 @@
             </div>
         </div>
 
-        <div class="modalfade" id="editDataModal" role="dialog">
+        <div class="modal fade" id="editDataModal" role="dialog">
             <div class="modal-dialog">
 
                 <div class="modal-content">
-                    <div class="modal-header" style="padding:35px 50px;">
+                    <div class="modal-header">
+                        <p>Edit details</p>
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h4><span class="glyphicon glyphicon-lock"></span></h4>
                     </div>
-                    <div class="modal-body" style="padding:40px 50px;">
+                    <div class="modal-body">
                         <form role="form" id="editLoadDetails">
                             <div class="form-group">
                                 <input type="text" class="form-control" id="nameDetails" placeholder="Name"/>
@@ -84,8 +87,10 @@
                             <div class="form-group">
                                 <input type="text" class="form-control" id="streamDetails" placeholder="Stream" />
                             </div>
-                            <button type="button" class="btn btn-success btn-block"><span class="glyphicon glyphicon-off"></span>Submit</button>
                         </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-success btn-block"><span class="glyphicon glyphicon-off"></span>Submit</button>
                     </div>
                 </div>
 
